quick dark mode fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,12 +7,12 @@
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #170022;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary-dark: #170022;
+  --ifm-color-primary-darker: #170022;
+  --ifm-color-primary-darkest: #170022;
+  --ifm-color-primary-light: #170022;
+  --ifm-color-primary-lighter: #170022;
+  --ifm-color-primary-lightest: #170022;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --header-font-color: #170022;
@@ -22,13 +22,13 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #e8d1f3;
+  --ifm-color-primary-dark: #e8d1f3;
+  --ifm-color-primary-darker: #e8d1f3;
+  --ifm-color-primary-darkest: #e8d1f3;
+  --ifm-color-primary-light: #e8d1f3;
+  --ifm-color-primary-lighter: #e8d1f3;
+  --ifm-color-primary-lightest: #e8d1f3;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
